--- a/README.adoc
+++ b/README.adoc
@@ -1,5 +1,5 @@
 ---
-permalink: /guides/app-monitoring
+permalink: /guides/app-monitoring/
 ---
 :projectid: app-monitoring
 :page-layout: guide-multipane
