--- a/README.adoc
+++ b/README.adoc
@@ -24,17 +24,20 @@ For application monitoring on OpenShift, you need to set up your own Prometheus 
 
 
 == A: Deploy A Sample Application with MP Metrics Endpoint
-Before diving into Prometheus deployment instructions, make sure there is a running application that has a service endpoint for outputting metrics in Prometheus format. 
+Prior to deploying Prometheus, ensure that there is a running application that has a service endpoint for outputting metrics in Prometheus format. 
 
-In this guide, it is assumed such app has been deployed to the OpenShift cluster inside a project/namespace called `myapp` and the Prometheus metrics endpoint is exposed on path `/metrics`.
+It is assumed such a running application has been deployed to the OpenShift cluster inside a project/namespace called `myapp`, and that the Prometheus metrics endpoint is exposed on path `/metrics`.
 
 == Deploy Prometheus - Prometheus Operator
 
-The Prometheus Operator is an open-source project from CoreOS as part of their Kubernetes Operator offering. It is starting to become the standard for Prometheus deployments on Kubernetes system. When Prometheus Operator is installed on the Kubernetes system, users no longer need to deal with Prometheus configuration by hands. Instead, they need to create ServiceMonitor resources for each of the service endpoint that needs to be monitored, which makes maintaining the Prometheus server a lot easier in daily operation. An architecture overview of the Prometheus Operator is shown below:
+The Prometheus Operator is an open-source project originating from CoreOS and exists as as part of their Kubernetes Operator offering. The Kubernetes Operator framework is becoming the standard for Prometheus deployments on a Kubernetes system. When the Prometheus Operator is installed on the Kubernetes system, you no longer need to hand-configure the Prometheus configuration. Instead, you create ServiceMonitor resources for each of the service endpoints that needs to be monitored: this makes daily maintainenance of the Prometheus server a lot easier. An architecture overview of the Prometheus Operator is shown below:
 
 image::/img/guide/prometheusOperator.png[link="/img/guide/prometheusOperator.png" alt="Prometheus Operator"]
 
-There are two ways to install Prometheus Operator. One is through Openshift Operator Lifecycle Manager or OLM, which is still in its technology preview phase in release 3.11 of Openshift. This approach will install an older version of Prometheus Operator that is supported by Red Hat. Another approach is to install Prometheus Operator by following the guide from the https://github.com/coreos/prometheus-operator[Prometheus Operator git repository]. Since OLM is still at its tech preview stage and requires a Red Hat subscription account for installation, this guide will show the installation without OLM to target a larger audience base. The guide will be updated with OLM approach when Kabanero officially adopts Openshift 4.x a few months from now.
+There are two ways to install the Prometheus Operator. 
+
+	1. One is through Openshift Operator Lifecycle Manager or OLM, (which is still in its technology preview phase in release 3.11 of Openshift). This approach installs an older version of the Prometheus Operator that is supported by Red Hat. 
+	2. Another approach is to install Prometheus Operator by following the guide from the https://github.com/coreos/prometheus-operator[Prometheus Operator git repository]. Since OLM is still at its technical preview stage and requires a Red Hat subscription account for installation, this guide showsthe installation without OLM to target a larger audience base. The guide will be updated with the OLM approach when Kabanero officially adopts Openshift 4.x.
 
 === Prometheus Operator Installation without OLM
 
@@ -48,9 +51,9 @@ The following procedure is based on the https://github.com/coreos/prometheus-ope
 [root@rhel7-openshift ~]# git clone https://github.com/coreos/prometheus-operator
 ----
 
-2. Open the bundle.yaml file and change all instances of **namespace: default** to the namespace where you want to deploy the Prometheus Operator. For example, if the namespace is **namespace: prometheus-operator**, you might need to create a new namespace called **prometheus-operator** if it does not exit on your Openshift cluster.
+2. Open the `bundle.yaml` file and change all instances of **namespace: default** to the namespace where you want to deploy the Prometheus Operator. For example, if the namespace is **namespace: prometheus-operator**, you might need to create a new namespace called **prometheus-operator** if it does not exit on your Openshift cluster.
 
-3. Save the *bundle.yaml* file and deploy the Prometheus Operator using the following command.
+3. Save the `bundle.yaml` file and deploy the Prometheus Operator using the following command.
 
 [role="command"]
 ----
@@ -64,7 +67,7 @@ You can receive an error message like the one below when running the command.
 Error creating: pods "prometheus-operator-5b8bfd696-" is forbidden: unable to validate against any security context constraint: [spec.containers[0].securityContext.securityContext.runAsUser: Invalid value: 65534: must be in the ranges: [1000070000, 1000079999]]
 ----
 
-To correct the error, change the **runAsUser: 65534** field in the *bundle.yaml* file to a valid value that is in the range specified in the error message. In this case, setting **runAsUser: 1000070000** in the *bundle.yaml* would be in the valid range. Save the *bundle.yaml* file and redeploy the promtheus-operator.
+To correct the error, change the **runAsUser: 65534** field in the `bundle.yaml` file to a valid value that is in the range specified in the error message. In this case, setting **runAsUser: 1000070000** in the `bundle.yaml` would be in the valid range. Save the `bundle.yaml` file and re-deploy the Prometheus Operator.
 
 [role="command"]
 ----
@@ -90,14 +93,14 @@ prometheus_snippet.yaml
 include::code/prometheus_snippet.yaml[]
 ----
 
-The [hotspot file=0]`service_monitor.yaml` file defines a ServiceMonitor resource. A ServiceMonitor defines a service endpoint that needs to be monitored by the Prometheus instance. Take for example, an application with label **app: myapp** from namespace **myapp**, and metrics endpoints defined in **spec.endpoints** to be monitored by Promtheus Operator. If the metrics endpoint is secured, you can define a secured endpoint with authentication configuration by following the https://github.com/coreos/prometheus-operator/blob/master/Documentation/api.md#endpoint[endpoint] API documentation of Prometheus Operator.
+The [hotspot file=0]`service_monitor.yaml` file defines a ServiceMonitor resource. A ServiceMonitor defines a service endpoint that needs to be monitored by the Prometheus instance. Take for example, an application with label **app: myapp** from namespace **myapp**, and metrics endpoints defined in **spec.endpoints** to be monitored by the Promtheus Operator. If the metrics endpoint is secured, you can define a secured endpoint with authentication configuration by following the https://github.com/coreos/prometheus-operator/blob/master/Documentation/api.md#endpoint[endpoint] API documentation of Prometheus Operator.
 
 [role="code_command hotspot file=0", subs="quotes"]
 ----
 Create the `service_monitor.yaml` file
 ----
 
-4. Apply the _servicemonitor.yaml_ file to create the ServiceMonitor resource.
+4. Apply the `servicemonitor.yaml` file to create the ServiceMonitor resource.
 
 [role="command"]
 ----
@@ -105,14 +108,14 @@ Create the `service_monitor.yaml` file
 ----
 
 5. Define a Prometheus resource that can scrape the targets defined in the ServiceMonitor resource. 
-Create a [hotspot file=1]_prometheus.yaml_ file that aggregates all the files from the git repository directory `prometheus-operator/example/rbac/prometheus/`. NOTE: Make sure to change the `namespace: default` to `namespace: prometheus-operator`.
+Create a [hotspot file=1]`prometheus.yaml` file that aggregates all the files from the git repository directory `prometheus-operator/example/rbac/prometheus/`. NOTE: Make sure to change the `namespace: default` to `namespace: prometheus-operator`.
 
 [role="code_command hotspot file=1", subs="quotes"]
 ----
 Create the `prometheus.yaml` file
 ----
 
-6. Apply the _prometheus.yaml_ file to deploy the Prometheus service. After all the resources are created, apply the Prometheus Operator bundle yaml file again.
+6. Apply the `prometheus.yaml` file to deploy the Prometheus service. After all the resources are created, apply the Prometheus Operator `bundle.yaml` file again.
 
 [role="command"]
 ----
@@ -144,21 +147,21 @@ prometheus   prometheus-prometheus-operator.apps.9.37.135.153.nip.io            
 9. Visit the *prometheus* route and go to the Prometheus *targets* page. At this point, the page should be empty with no endpoints being discovered. 
 
 
-10. Look at the `_prometheus.yaml_` file and update to both the *serviceMonitorNamespaceSelector* and *serviceMonitorSelector* fields in the yaml file. The ServiceMonitor needs to satisfy the matching requirement for both selectors before it can be picked up by the Prometheus service, like in the [hotspot file=2]`prometheus_snippet.yaml` file. In this case,our ServiceMonitor has the *k8s-app* label, but the target namespace "myapp" is missing the required *prometheus: monitoring* label. 
+10. Look at the `prometheus.yaml` file and update the *serviceMonitorNamespaceSelector* and *serviceMonitorSelector* fields. The ServiceMonitor needs to satisfy the matching requirement for both selectors before it can be picked up by the Prometheus service, like in the [hotspot file=2]`prometheus_snippet.yaml` file. In this case,our ServiceMonitor has the *k8s-app* label, but the target namespace *"myapp"* is missing the required *prometheus: monitoring* label. 
 
 [role="code_command hotspot file=2", subs="quotes"]
 ----
 Update `prometheus.yaml` to reflect the `prometheus_snippet.yaml` file
 ----
 
-11. Add the label to the "myapp" namespace.
+11. Add the label to the *"myapp"* namespace.
 
 [role="command"]
 ----
 [root@rhel-2EFK]# oc label namespace myapp prometheus=monitoring
 ----
 
-12. Check to see that the Prometheus targets page is picking the target endpoints. If the service endpoint is discovered, but Prometheus is reporting a *DOWN* status, you need to make the prometheus-operator project to be globally accessible.
+12. Check to see that the Prometheus targets page is picking up the target endpoints. If the service endpoint is discovered, but Prometheus is reporting a *DOWN* status, you need to make the prometheus-operator project to be globally accessible.
 
 [role="command"]
 ----
@@ -167,21 +170,21 @@ oc adm pod-network make-projects-global prometheus-operator
 
 == B: Deploy Prometheus - Legacy deployments
 
-For users who just migrated their applications to Openshift and define their own Prometheus configuration file, using the Prometheus Operator is not the only option for Prometheus deployments. You can deploy Prometheus by using the example yaml file provided by the openshift origin repository.
+For users who just migrated their applications to Openshift and define their own Prometheus configuration file, using the Prometheus Operator is not the only option for Prometheus deployments. You can deploy Prometheus by using the example yaml file provided by the Openshift origin repository.
 
 [role="command"]
 ----
 [root@rhel7-openshift ~]# oc new-project Prometheus
 ----
 
-1. Deploy the Prometheus using the sample *prometheus.yaml* file from [here](https://github.com/openshift/origin/tree/master/examples/prometheus)
+1. Deploy the Prometheus using the sample `prometheus.yaml` file from https://github.com/openshift/origin/tree/master/examples/prometheus[here]
 
 [role="command"]
 ----
 [root@rhel7-openshift ~]# oc new-app -f https://raw.githubusercontent.com/openshift/origin/master/examples/prometheus/prometheus.yaml -p NAMESPACE=prometheus
 ----
 
-2. Edit the "prometheus" ConfigMap resource from prometheus namespace. 
+2. Edit the *"prometheus"* ConfigMap resource from the *prometheus* namespace. 
 
 [role="command"]
 ----
@@ -226,9 +229,7 @@ oc adm pod-network make-projects-global prometheus
 
 == Deploy Grafana
 
-Regardless of which approach was used to deploy Prometheus on Openshift, use Grafana for dashboard and visualization of the metrics. Use sample grafana yaml file provided by Openshift in the openshift origin git repository to install Grafana.
-
-NOTE: Perform the following steps to ensure that Prometheus endpoints are reachable as a data source in Grafana.
+Regardless of which approach was used to deploy Prometheus on Openshift, use Grafana for dashboard and visualization of the metrics. Use the sample `grafana.yaml` file provided by Openshift in the Openshift origin git repository to install Grafana. NOTE: Perform the following steps to ensure that Prometheus endpoints are reachable as a data source in Grafana.
 
 1. Create a new project called *grafana*.
 
@@ -237,7 +238,7 @@ NOTE: Perform the following steps to ensure that Prometheus endpoints are reacha
 [root@rhel-2EFK ~]# oc new-project grafana
 ----
 
-2. Deploy Grafana using the grafana.yaml file from the Openshift origin repository.
+2. Deploy Grafana using the `grafana.yaml` file from the Openshift origin repository.
 
 [role="command"]
 ----
@@ -259,14 +260,14 @@ include::code/grafana-datasources.yaml[]
 
 4. For Grafana to add existing prometheus datasources in Openshift, define the datasources in a ConfigMap resource under the grafana namespace. Create a ConfigMap yaml file called [hotspot]`grafana-datasources.yaml`. 
 
-5. Apply the grafana-datasources.yaml file to create the ConfigMap resource.
+5. Apply the `grafana-datasources.yaml` file to create the ConfigMap resource.
 
 [role="command"]
 ----
 [root@rhel-2EFK ~]# oc apply -f grafana-datasources.yaml
 ----
 
-6. Acquire The *\[grafana-ocp token\]* can be acquired by using the following command.
+6. Acquire The *\[grafana-ocp token\]* by using the following command.
 
 [role="command"]
 ----
